kubernetes/kubernetes/monitoring/prometheus-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
  namespace: kube-prometheus
  labels:
    app.kubernetes.io/instance: prometheus-grafana
  annotations:
    cert-manager.io/issuer: "cert-manager-issuer-prometheus-grafana"
    # acme.cert-manager.io/http01-edit-in-place: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - grafana-prome.sample-click.net
    secretName: grafana-prome-tls
  ingressClassName: nginx
  rules:
  - host: grafana-prome.sample-click.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
